update supported intellij version